--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,4 +1,5 @@
 name: Latest blog post workflow
+
 on:
   schedule: # Run workflow automatically
     - cron: '0 * * * *' # Runs every hour, on the hour
@@ -18,3 +19,6 @@ jobs:
         with:
           feed_list: "https://citron031.tistory.com/rss"
           accept_header: "text/xml"
+          max_post_count: 5 # 최근 5개의 기사 동기화
+          readme_path: ./README.md # 대상 README 파일
+          commit_message: "Update README with latest blog posts"
